--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # dependencies
 /.venv
+/brain_games/__pycache__
+/brain_games/common/__pycache__
+/brain_games/games/__pycache__
+/brain_games/scripts/__pycache__
