--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,21 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.12"
+prompt = "^0.4"
+colorama = "^0.4"
+sympy = "^1.13"
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.1.0"
+
+[tool.poetry.scripts]
+brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
+brain-progression = "brain_games.scripts.brain_progression:main"
+brain-prime = "brain_games.scripts.brain_prime:main"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-brain-games = "brain_games.scripts.brain_games:main"
