brain-games - feat: games functional

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 # dependencies
 /.venv
+/dist
+/brain_games/__pycache__
+/brain_games/common/__pycache__
+/brain_games/games/__pycache__
+/brain_games/scripts/__pycache__
