--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,35 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Some small brain games"
 authors = ["Dmitry Zolotko <ekzebiche@gmail.com>"]
+repository = "https://github.com/Ekzebiche/python-project-49.git"
 readme = "README.md"
+classifiers = [
+    "Environment :: Console",
+    "Programming Language :: Python :: 3.12"
+]
 packages = [
-    { include = "brain_games" },
+    { include = "brain_games" }
 ]
 
 [tool.poetry.dependencies]
 python = "^3.12"
+prompt = "^0.4"
+colorama = "^0.4"
+gmpy2 = "^2.2"
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.1.0"
+
+[tool.poetry.scripts]
+brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
+brain-progression = "brain_games.scripts.brain_progression:main"
+brain-prime = "brain_games.scripts.brain_prime:main"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-brain-games = "brain_games.scripts.brain_games:main"
